T #63 MEXC websocket client to consume PB messages